--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
                 <p id="active--countdown"></p>
             </div>
         </div>
-        <script src="index.pack.js"></script>
+        <script src="index.js"></script>
     </body>
 </html>
